TestRepo2/src/objects/contentCategory__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Categories for content objects.</description>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Theme__c</fullName>
        <description>The parent theme(s) of this sub category. Should be comma delimited if more than one parent.</description>
        <inlineHelpText>The parent theme(s) of this sub category. Should be comma delimited if more than one parent.</inlineHelpText>
        <label>Parent Theme</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Order to display items</description>
        <inlineHelpText>Order to display items</inlineHelpText>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Content Category</label>
</CustomObject>